--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router-hono",
+  "name": "react-router-hono-cloudflare-plugin",
   "private": true,
   "type": "module",
   "scripts": {
@@ -7,40 +7,40 @@
     "dev": "react-router dev",
     "start": "react-router build && wrangler dev",
     "typecheck": "react-router typegen && tsc --build --noEmit",
-    "deploy": "next-exec -c deploy -- wrangler deploy"
+    "deploy": "wrangler deploy"
   },
   "dependencies": {
-    "@react-router/fs-routes": "^7.1.3",
-    "hono": "^4.6.17",
-    "isbot": "^5.1.21",
+    "@react-router/fs-routes": "^7.3.0",
+    "hono": "^4.7.4",
+    "isbot": "^5.1.23",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.3",
-    "remix-provider": "^1.0.1"
+    "react-router": "7.3.0",
+    "remix-provider": "^1.0.3"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "0.0.2",
-    "@cloudflare/workers-types": "^4.20250121.0",
-    "@hono/vite-dev-server": "0.18.1",
-    "@react-router/dev": "7.1.3",
-    "@tailwindcss/vite": "4.0.0",
-    "@types/node": "^22.10.9",
-    "@types/react": "^19.0.7",
-    "@types/react-dom": "^19.0.3",
-    "autoprefixer": "^10.4.20",
-    "hono-react-router-adapter": "0.6.1",
+    "@cloudflare/vite-plugin": "0.1.9",
+    "@cloudflare/workers-types": "^4.20250303.0",
+    "@hono/vite-dev-server": "0.19.0",
+    "@react-router/dev": "7.3.0",
+    "@tailwindcss/vite": "4.0.12",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.21",
+    "hono-react-router-adapter": "0.6.2",
     "next-exec": "^1.0.0",
-    "postcss": "^8.5.1",
-    "react-router-hono-server": "2.7.1",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.11",
+    "postcss": "^8.5.3",
+    "react-router-hono-server": "2.11.0",
+    "tailwindcss": "^4.0.12",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^3.105.0"
+    "wrangler": "^3.114.0"
   },
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/SoraKumo001/react-router7-hono",
   "author": "SoraKumo <info@croud.jp>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "https://github.com/SoraKumo001/react-router-hono-cloudflare-plugin"
 }
