--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,6 @@
     ".react-router/types/**/*",
     "app/**/*",
     "app/**/.server/**/*",
-    "app/**/.client/**/*",
-    "workers/**/*"
+    "app/**/.client/**/*"
   ]
 }
