--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@ workers_dev = true
 name = "react-router-hono-cloudflare-plugin"
 compatibility_date = "2024-12-30"
 compatibility_flags = ["nodejs_compat"]
-main = "workers/app.ts"
+main = "./workers/app.ts"
 assets = { directory = "./build/client/" }
 
 [vars]
